substrate/frame/support/test/tests/pallet_ui/no_default_but_missing_with_default.stderr
error: `#[pallet:no_default]` can only be used if `#[pallet::config(with_default)]` has been specified
  --> tests/pallet_ui/no_default_but_missing_with_default.rs:26:4
   |
26 |         #[pallet::no_default]
   |          ^^^^^^^^^^^^^^^^^^^^
